--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-family: 'Roboto Mono', monospace;
 }
 
 
@@ -13,15 +16,16 @@
 }
 
 .main-div{
-    margin-left: 400px;
+    margin-left: 210px;
     padding-top: 100px;
-    width: 500px;
+    width: 900px;
 }
 
 
 .playing-div{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin-top: 100px;
     text-align: center;
     
@@ -43,3 +47,39 @@
     text-align: center;
 }
 
+.game-controls{
+    margin-top: 60px;
+}
+
+.control-images{
+    background-color: #27285C;
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+    margin-left: 30px;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.control-images img{
+    width: 40px;
+    height: 20px;
+    margin-top: 15px;
+}
+
+.controls{
+    display: flex;
+}
+
+#play{
+    cursor: pointer;
+    margin-top: 20px;
+    border: none;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    border-radius: 30px;
+    background-color: #27285C;
+    color: #fff;
+}
