--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@
 
 .img-area{
     width: 250px;
+    
 }
 
 .img-area img{
@@ -83,3 +84,20 @@
     background-color: #27285C;
     color: #fff;
 }
+
+.check{
+    cursor: pointer;
+    margin-top: 20px;
+    border: none;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    border-radius: 30px;
+    background-color: #27285C;
+    color: #fff;
+    
+}
+
+
+
